# sentinel-edr

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.scale.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml  Dockerfile
agent/bpf/: .gitignore  Dockerfile  build.sh  sentinel.bpf.c
agent/sentinel-ebpf/: Cargo.toml
agent/sentinel-ebpf/.cargo/: config.toml
agent/sentinel-ebpf/src/: main.rs
agent/src/: bpf.rs  collectors.rs  config.rs  dlp.rs  dnscache.rs  dnssniff.rs  ebpf.rs  event.rs  main.rs  notify.rs  respond.rs  scenario.rs  spool.rs  transport.rs
dashboard/: Dockerfile  Dockerfile.prebuilt  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
dashboard/app/: globals.css  layout.tsx
dashboard/app/(app)/: layout.tsx  page.tsx
dashboard/app/(app)/cases/: page.tsx
dashboard/app/(app)/detections/: page.tsx
dashboard/app/(app)/dlp/: page.tsx
dashboard/app/(app)/endpoints/: page.tsx
dashboard/app/(app)/events/: page.tsx
dashboard/app/(app)/internet/: page.tsx
dashboard/app/(app)/responses/: page.tsx
dashboard/app/(app)/rules/: page.tsx
dashboard/app/(app)/settings/: page.tsx
dashboard/app/api/bootstrap/: route.ts
dashboard/app/api/proxy/[...path]/: route.ts
dashboard/app/api/stream/: route.ts
dashboard/app/login/: page.tsx
dashboard/components/: ai-triage.tsx  app-sidebar.tsx  attack-story.tsx  command-palette.tsx  confirm-dialog.tsx  data-table.tsx  empty-state.tsx  incident-summary.tsx  info-sheet.tsx  inspect.tsx  lineage-tree.tsx  live-announcer.tsx  live-status.tsx  logo.tsx  metric.tsx  mitre.tsx  page-title.tsx  policy-panel.tsx  severity.tsx  sparkline.tsx  theme-toggle.tsx  two-factor.tsx
dashboard/components/ui/: button.tsx  sidebar.tsx  table.tsx  tooltip.tsx
dashboard/lib/: auth-client.ts  auth.ts  format.ts  go.ts  mitre.ts  response-actions.ts  types.ts  use-data.ts  use-stream.ts
dashboard/public/: .gitkeep
dashboard/scripts/: seed-operator.mjs
deploy/: nginx.conf  sentinel-agent.service
deploy/app2/: Makefile  build-dashboard.sh  docker-compose.yml  install-agent.sh  sentinel.conf
deploy/app2/signing/: README.md  sentinel-signing.key  sentinel-signing.pub
deploy/local/: .env.example  README.md  deploy.sh  docker-compose.yml  nginx.conf
docs/: AGENT-INSTALL.md  API.md  ARCHITECTURE.md  CAPACITY.md  EBPF.md  RESEARCH.md  ROADMAP-IMPL.md  SCALING.md  SECURITY-HARDENING-PLAN.md  THREAT_MODEL.md
docs/security/: PENETRATION-TEST-REPORT.md  Sentinel-Penetration-Test-Report.docx
scripts/: e2e.sh  gen-certs.sh  install-agent.sh
server/: Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/intel/feeds/: README.md  sample.ioc
server/internal/ai/: triage.go
server/internal/api/: api.go  clientip_test.go  web_embed.go
server/internal/api/webdist/: index.html
server/internal/api/webdist/assets/: index-Bhypntww.css  index-CgPykDZl.js  index-ClSZDDOe.js  index-DpGxRxJ7.css
server/internal/auth/: auth.go  jwt_test.go  limiter_test.go
server/internal/baseline/: baseline.go  baseline_test.go
server/internal/behavior/: behavior.go  behavior_test.go  gc_test.go
server/internal/bus/: bus.go  bus_test.go  nats.go
server/internal/cases/: cases.go  cases_test.go
server/internal/config/: config.go  config_test.go
server/internal/detect/: detect.go  detect_test.go  rules_validate_test.go
server/internal/dlp/: dlp.go  dlp_test.go
server/internal/hub/: hub.go
server/internal/intel/: intel.go  intel_test.go
server/internal/mesh/: mesh.go
server/internal/model/: model.go
server/internal/notify/: notify.go  notify_test.go
server/internal/pipeline/: pipeline.go
server/internal/respond/: respond.go
server/internal/siem/: cef_test.go  siem.go
server/internal/store/: postgres.go  store.go  store_test.go
server/internal/transport/: transport.go
server/internal/tune/: tune.go  tune_test.go
server/rules/: auth_root_login.yml  file_credential_access.yml  file_cron_persistence.yml  file_preload_persistence.yml  file_shell_profile_persistence.yml  file_ssh_authkeys.yml  file_systemd_persistence.yml  file_webshell.yml  net_anon_network.yml  net_cloud_upload.yml  net_crypto_miner.yml  pkg_change.yml  proc_disable_security.yml  proc_download_exec.yml  proc_fileless_exec.yml  proc_firewall_flush.yml  proc_gtfobins.yml  proc_log_tamper.yml  proc_priv_esc.yml  proc_reverse_shell.yml  proc_webserver_shell.yml  sys_hardening_posture.yml  sys_kmod_load.yml  sys_preload_tamper.yml  sys_rootkit.yml  usb_mass_storage.yml  usb_removable_mount.yml
web/: index.html  package.json  pnpm-lock.yaml  shot.mjs  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1779553837244-fb1eef59ea7218.mjs
web/scripts/: build.sh
web/src/: App.tsx  Layout.tsx  ProcessTree.tsx  api.ts  components.tsx  filters.tsx  main.tsx  store.tsx  styles.css  types.ts  ui.tsx  ws.ts
web/src/pages/: Cases.tsx  Detections.tsx  Dlp.tsx  Endpoints.tsx  Events.tsx  Internet.tsx  Overview.tsx  Responses.tsx  Rules.tsx  Settings.tsx
