[package]
name = "sentinel-agent"
version = "1.0.0"
edition = "2021"
description = "Sentinel endpoint agent: monitoring, EDR telemetry, DLP, and automated response for Linux endpoints."
license = "Apache-2.0"

[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mac_address = "1.1"
hostname = "0.4"
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
regex = "1"
sha2 = "0.10"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
