[package]
name = "sentinel-agent"
version = "1.0.0"
edition = "2021"
description = "Sentinel endpoint agent: monitoring, EDR telemetry, DLP, and automated response for Linux endpoints."
license = "Apache-2.0"

[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mac_address = "1.1"
hostname = "0.4"
aes-gcm = "0.10"
rand = "0.9"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
regex = "1"
sha2 = "0.11"
walkdir = "2"
libc = "0.2"
dns-lookup = "3"
zstd = "0.13"
# Forward-DNS capture: sniff UDP/53 responses to learn the REAL domain a host connected to
# (the IP's reverse-PTR is the hosting provider, not the visited name). Needs libpcap at
# runtime (libpcap0.8) + CAP_NET_RAW; the sniffer fails closed to rDNS if either is missing.
pcap = "2"

# eBPF userspace loader — only pulled in with `--features ebpf`. libbpf-rs (vendored libbpf)
# loads the C/CO-RE object (agent/bpf/sentinel.bpf.o) at runtime: telemetry tracepoint + LSM
# tamper-protection hooks. CO-RE makes one object run on every dev-PC kernel. Needs a runtime
# kernel with BTF + CAP_BPF/CAP_SYS_ADMIN (+ lsm=bpf at boot for the LSM enforcement hooks).
libbpf-rs = { version = "0.24", features = ["vendored"], optional = true }

[features]
default = []
# Build the in-kernel eBPF path (telemetry + LSM tamper protection). Build deps: clang, libelf,
# zlib, pkg-config (vendored libbpf). Runtime: BTF kernel; lsm=bpf for enforcement.
ebpf = ["dep:libbpf-rs"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
